--- a/UDPSlikskab/UDPSlikskab.csproj
+++ b/UDPSlikskab/UDPSlikskab.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ModelLibSlikskab\ModelLibSlikskab.csproj" />
+  </ItemGroup>
+
 </Project>
